--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "mongodb": "^3.0.2",
+    "mongoose": "^5.0.6",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2"
   }
