--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongodb": "^3.0.2",
     "mongoose": "^5.0.6",
     "morgan": "~1.8.1",
+    "passport-google": "^0.3.0",
     "serve-favicon": "~2.4.2"
   }
 }
