--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "mongoose": "^5.0.6",
     "morgan": "~1.8.1",
     "passport-google": "^0.3.0",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "^2.4.5"
   }
 }
