--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "morgan": "~1.8.1",
     "passport-google": "^0.3.0",
     "serve-favicon": "^2.4.5"
+  },
+  "devDependencies": {
+    "cookie-session": "^2.0.0-beta.3",
+    "passport-google-oauth20": "^1.0.0",
+    "zxcvbn": "^4.4.2"
   }
 }
