--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
+    "cookie-session": "^2.0.0-beta.3",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
@@ -15,6 +16,7 @@
     "mongoose": "^5.0.6",
     "morgan": "~1.8.1",
     "passport-google": "^0.3.0",
+    "passport-google-oauth20": "^1.0.0",
     "serve-favicon": "^2.4.5"
   },
   "devDependencies": {
