--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
+    "eff-diceware-passphrase": "^1.0.0",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "mongodb": "^3.0.2",
